# embewi-agent-esp

./: .clangd  .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  partitions_4mb.csv  partitions_8mb.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.prod
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml
apps/button/: main.c
apps/rainbow/: main.c
docs/: api.md  architecture.md  conf.py  configuration.md  deploy.md  embewi-api.md  embewi-contract-v2.md  embewi-prod-security.md  index.md  requirements.txt  workload.md
main/: CMakeLists.txt  Kconfig.projbuild  embewi_agent.h  embewi_app.h  embewi_app_button.c  embewi_app_rainbow.c  embewi_config.c  embewi_heartbeat.c  embewi_http.c  embewi_log.c  embewi_main.c  embewi_ota.c  embewi_parse.c  embewi_parse.h  embewi_provision.c  embewi_selfcheck.c  embewi_time.c  embewi_tls.c  idf_component.yml
test/host/: Makefile  test_parse.c
